# contact_stability

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: all.launch  pendular.launch  static.launch
msg/: Contact.msg
scripts/: pendular_server.py  static_server.py
src/bretl_projection/: __init__.py  algorithm.py  optim.py  polygon.py  vertex.py
src/contact_stability/: __init__.py  pendular.py  static.py
srv/: PendularArea.srv  StaticArea.srv
test/: pendular_area.py  static_area.py
